...
        android:id="@+id/tv_ok"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginRight="20dp"
        android:enabled="false"
        android:gravity="center"
        android:text="确定"
        android:textColor="@color/selector_sure_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view_line"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
...
